salvia_macro/tests/input_access_ui/fail/host_traits_no_hash.rs
use salvia::InputAccess;

#[derive(Debug, Copy, Clone, Eq, PartialEq, InputAccess)]
struct A;

fn main() {}